docs - added operation ids
