# docs/swagger.json
@@ -9,6 +9,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "operationId": "GetProjectsAll",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -34,6 +35,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "operationId": "PostProject",
                 "parameters": [
                     {
                         "description": "Project Create Params",
@@ -69,6 +71,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "operationId": "PostUser",
                 "parameters": [
                     {
                         "description": "User Create Params",
@@ -101,6 +104,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "operationId": "GetUserByID",
                 "parameters": [
                     {
                         "type": "integer",
