# restapi/users_endpoints.go
@@ -6,6 +6,7 @@ import (
 	"gitlab.com/ulexxander/remoconf/storage"
 )
 
+// @ID GetUserByID
 // @Produce json
 // @Param id path int true "User ID"
 // @Success 200 {object} storage.User
@@ -25,6 +26,7 @@ func (e *Endpoints) GetUserByID(w http.ResponseWriter, r *http.Request) {
 	e.resData(w, res)
 }
 
+// @ID PostUser
 // @Accept json
 // @Produce json
 // @Param params body storage.UserCreateParams true "User Create Params"
